@@ -394,8 +394,7 @@ namespace libtorrent
 			void dht_get_peers(sha1_hash const& info_hash);
 			void dht_announce(sha1_hash const& info_hash, int port = 0, int flags = 0);
 
-			void dht_live_nodes(sha1_hash const& nid
-				, std::function<bool(sha1_hash const&, udp::endpoint const&)> cb);
+			void dht_live_nodes(sha1_hash const& nid);
 
 			void dht_direct_request(udp::endpoint ep, entry& e
 				, void* userdata = nullptr);
