@@ -2134,25 +2134,39 @@ namespace libtorrent
 		, std::vector<std::pair<sha1_hash, udp::endpoint>> const& nodes)
 		: node_id(nid)
 		, m_alloc(alloc)
-		, m_num_nodes(int(nodes.size()))
 	{
-		std::size_t total_size = nodes.size(); // num bytes for sizes
-		for (auto const& n : nodes) {
-			total_size += n.first.size() + n.second.size();
+		for (auto const& n : nodes)
+		{
+			if (n.second.protocol() == udp::v4())
+				m_v4_num_nodes++;
+#if TORRENT_USE_IPV6
+			else
+				m_v6_num_nodes++;
+#endif
 		}
 
-		m_nodes_idx = alloc.allocate(aux::numeric_cast<int>(total_size));
+		m_v4_nodes_idx = alloc.allocate(m_v4_num_nodes * (20 + 6));
+		m_v6_nodes_idx = alloc.allocate(m_v6_num_nodes * (20 + 18));
 
-		char *ptr = alloc.ptr(m_nodes_idx);
-		for (auto const& n : nodes) {
-			std::size_t size = n.first.size();
-			std::memcpy(ptr, n.first.data(), size);
-			ptr += size;
-			size = n.second.size();
-			TORRENT_ASSERT(size < 0x100);
-			detail::write_uint8(size, ptr);
-			std::memcpy(ptr, n.second.data(), size);
-			ptr += size;
+		char* v4_ptr = alloc.ptr(m_v4_nodes_idx);
+#if TORRENT_USE_IPV6
+		char* v6_ptr = alloc.ptr(m_v6_nodes_idx);
+#endif
+		for (auto const& n : nodes)
+		{
+			udp::endpoint const& endp = n.second;
+			if (endp.protocol() == udp::v4())
+			{
+				detail::write_string(n.first.to_string(), v4_ptr);
+				detail::write_endpoint(endp, v4_ptr);
+			}
+#if TORRENT_USE_IPV6
+			else
+			{
+				detail::write_string(n.first.to_string(), v6_ptr);
+				detail::write_endpoint(endp, v6_ptr);
+			}
+#endif
 		}
 	}
 
@@ -2160,29 +2174,38 @@ namespace libtorrent
 	{
 		char msg[200];
 		std::snprintf(msg, sizeof(msg), "dht live nodes for id: %s, nodes %d"
-			, aux::to_hex(node_id).c_str(), m_num_nodes);
+			, aux::to_hex(node_id).c_str(), num_nodes());
 		return msg;
 	}
 
 	int dht_live_nodes_alert::num_nodes() const
 	{
-		return m_num_nodes;
+		return m_v4_num_nodes + m_v6_num_nodes;
 	}
 
 	std::vector<std::pair<sha1_hash, udp::endpoint>> dht_live_nodes_alert::nodes() const
 	{
-		std::size_t const num_nodes = aux::numeric_cast<std::size_t>(m_num_nodes);
-		std::vector<std::pair<sha1_hash, udp::endpoint>> nodes(num_nodes);
+		aux::vector<std::pair<sha1_hash, udp::endpoint>> nodes;
+		nodes.reserve(num_nodes());
 
-		const char *ptr = m_alloc.get().ptr(m_nodes_idx);
-		for (std::size_t i = 0; i < num_nodes; i++) {
-			std::size_t size = sha1_hash::size();
-			std::memcpy(nodes[i].first.data(), ptr, size);
-			ptr += size;
-			size = detail::read_uint8(ptr);
-			std::memcpy(nodes[i].second.data(), ptr, size);
-			ptr += size;
+		char const* v4_ptr = m_alloc.get().ptr(m_v4_nodes_idx);
+		for (int i = 0; i < m_v4_num_nodes; i++)
+		{
+			sha1_hash ih;
+			std::memcpy(ih.data(), v4_ptr, 20);
+			v4_ptr += 20;
+			nodes.emplace_back(ih, detail::read_v4_endpoint<udp::endpoint>(v4_ptr));
 		}
+#if TORRENT_USE_IPV6
+		char const* v6_ptr = m_alloc.get().ptr(m_v6_nodes_idx);
+		for (int i = 0; i < m_v6_num_nodes; i++)
+		{
+			sha1_hash ih;
+			std::memcpy(ih.data(), v6_ptr, 20);
+			v6_ptr += 20;
+			nodes.emplace_back(ih, detail::read_v6_endpoint<udp::endpoint>(v6_ptr));
+		}
+#endif
 
 		return nodes;
 	}
